--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 allprojects {
   apply plugin: 'eclipse'
   apply plugin: 'idea'
+  ext{
+    gdxVideoVersion='1.3.2-SNAPSHOT'
+  }
 
   // This allows you to "Build and run using IntelliJ IDEA", an option in IDEA's Settings.
   idea {
