--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,11 @@ dependencies {
   api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  dependencies {
+    implementation "com.badlogicgames.gdx-video:gdx-video:$gdxVideoVersion"
+  }
+
+
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
