--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -28,6 +28,10 @@ if (JavaVersion.current().isJava9Compatible()) {
 }
 
 dependencies {
+//  implementation "com.badlogicgames.gdx:gdx-video-core:$gdxVersion"
+  implementation "com.badlogicgames.gdx-video:gdx-video:$gdxVideoVersion"
+//
+//  implementation "com.github.libgdx:gdx-video:$gdxVersion"
   implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
   implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
   implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
